syntax = "proto3";
package stateset.core.orders;

option go_package = "github.com/stateset/core/x/orders/types";

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";

// Params defines configurable parameters for the orders module.
message Params {
  int64 default_order_expiration = 1;
  int64 default_escrow_expiration = 2;
  int64 dispute_window = 3;

  cosmos.base.v1beta1.Coin min_order_amount = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  cosmos.base.v1beta1.Coin max_order_amount = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];

  uint32 default_fee_rate_bps = 6;
  string stablecoin_denom = 7;
  bool auto_complete_after_delivery = 8;
  int64 auto_complete_window = 9;
}

// Order represents a customer order in the Stateset commerce system.
message Order {
  uint64 id = 1;
  string customer = 2;
  string merchant = 3;
  string status = 4;
  repeated OrderItem items = 5 [(gogoproto.nullable) = false];

  cosmos.base.v1beta1.Coin subtotal = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  cosmos.base.v1beta1.Coin shipping_cost = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  cosmos.base.v1beta1.Coin tax_amount = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  cosmos.base.v1beta1.Coin discount_amount = 9 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  cosmos.base.v1beta1.Coin total_amount = 10 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];

  PaymentInfo payment_info = 11 [(gogoproto.nullable) = false];
  ShippingInfo shipping_info = 12 [(gogoproto.nullable) = false];
  string metadata = 13;

  google.protobuf.Timestamp created_at = 14 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Timestamp updated_at = 15 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Timestamp paid_at = 16 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Timestamp shipped_at = 17 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Timestamp delivered_at = 18 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Timestamp completed_at = 19 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Timestamp expires_at = 20 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];

  uint64 settlement_id = 21;
  uint64 dispute_id = 22;
}

// OrderItem represents an individual item within an order.
message OrderItem {
  string id = 1;
  string product_id = 2;
  string product_name = 3;
  uint64 quantity = 4;
  cosmos.base.v1beta1.Coin unit_price = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  cosmos.base.v1beta1.Coin total_price = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  string variant = 7;
  string metadata = 8;
}

// PaymentInfo contains payment details for an order.
message PaymentInfo {
  string status = 1;
  string method = 2;
  string transaction_id = 3;
  uint64 settlement_id = 4;
  uint64 escrow_id = 5;
  cosmos.base.v1beta1.Coin paid_amount = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  cosmos.base.v1beta1.Coin refunded_amount = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  cosmos.base.v1beta1.Coin fee_amount = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  google.protobuf.Timestamp paid_at = 9 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}

// ShippingInfo contains shipping details for an order.
message ShippingInfo {
  Address address = 1 [(gogoproto.nullable) = false];
  string method = 2;
  string carrier = 3;
  string tracking_number = 4;
  google.protobuf.Timestamp estimated_delivery = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Timestamp actual_delivery = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
}

// Address represents a shipping or billing address.
message Address {
  string line1 = 1;
  string line2 = 2;
  string city = 3;
  string state = 4;
  string postal_code = 5;
  string country = 6;
  string name = 7;
  string phone = 8;
}

// Dispute represents a dispute on an order.
message Dispute {
  uint64 id = 1;
  uint64 order_id = 2;
  string customer = 3;
  string merchant = 4;
  string reason = 5;
  string description = 6;
  repeated string evidence = 7;
  string status = 8;
  string resolution = 9;
  string resolved_by = 10;
  google.protobuf.Timestamp created_at = 11 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Timestamp updated_at = 12 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  google.protobuf.Timestamp resolved_at = 13 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  cosmos.base.v1beta1.Coin amount = 14 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
}
